--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <div class="relative flex items-center justify-center">
             <div class="my-8 w-11/12 md:w-3/4 mx-auto clip clip-full h-0 overflow-hidden bg-no-repeat"></div>
             <h1 class="name absolute text-6xl md:text-7xl opacity-0">TH<span class="text-9xl">R</span>IFT</h1>
-            <h1 class="text-9xl tag absolute opacity-0">Fashion Store</h1>
+            <h1 class="text-9xl tag absolute opacity-0 milk ls-12">Fashion Store</h1>
         </div>
         <footer class="relative footer opacity-0 flex justify-end">
             <div class="absolute bottom-0 mb-8 w-8 flex flex-col items-center">
