--- a/index.html
+++ b/index.html
@@ -16,7 +16,100 @@
 
 </head>
 <style>
+  .User-area {
+    position: relative; 
+    z-index: 999999; 
+    width: 100%;
+    height: 100%;
+  }
 
+  .User-area>.User-avtar .img {
+    border-radius: 30px;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 12px -5px #000;
+  }
+ 
+  .User-area>.User-avtar .img  { 
+    width: 40px;
+    height: 40px;
+  }
+ 
+  .User-area>.User-avtar .img img { 
+   filter: invert(1);
+  }
+ 
+
+  .User-Dropdown {
+    display: none;
+    position: absolute;
+    border-radius: 7px;
+    background: #fff;
+    box-shadow: 0px 0px 8px rgba(214, 214, 214, 0.78);
+    list-style: none;
+    padding: 0 20px;
+    width: 150px;
+    margin: 0;
+    top: 55px;
+    right: 5%;
+  }
+
+  .User-Dropdown:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin-left: -0.5em;
+    right: 0px;
+    box-sizing: border-box;
+    border: 7px solid black;
+    border-color: transparent transparent #fff #fff;
+    transform-origin: 0 0;
+    transform: rotate(135deg);
+    box-shadow: -3px 3px 3px -3px rgba(214, 214, 214, 0.78);
+  }
+
+  .User-Dropdown.U-open {
+    display: block;
+  }
+
+  .User-Dropdown>li {
+    padding: 0px;
+    line-height: 47px;
+    border-bottom: 1px solid rgba(215, 215, 215, 0.17);
+  }
+
+  .User-Dropdown>li:last-child {
+    border-bottom: 0px;
+  }
+
+  .User-Dropdown>li>a {
+    font-size: 13px;
+    padding: 15px 25px 16px 10px;
+    text-decoration: none;
+    color: #1787e0;
+    transition: all 0.2s ease-out;
+  }
+ 
+  .User-Dropdown>li:before {
+    content: '';
+    width: 0px;
+    height: 40px;
+    position: absolute;
+    background: #2196f3;
+    margin-top: 4px;
+    border-radius: 0 1px 1px 0;
+    left: 0px;
+    transition: all 0.2s ease;
+  }
+
+  .User-Dropdown>li:hover:before {
+    width: 5px;
+    border-radius: 30px;
+  }
+
+  .User-Dropdown>li a:hover {
+    margin-left: 5px;
+  }
 </style>
 
 <body>
@@ -38,29 +131,83 @@
         <li class="mx-2 px-4 py-2 text-sm relative mouseactive" id="contact_button">
           Contact
         </li>
+        <li class="mx-2 px-4 py-2 text-sm relative" id="user">
+          <div class="User-area">
+            <div class="User-avtar flex items-center">
+              <div class="img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png" />
+              </div>
+              <div class="content mx-3">
+                Welcome, <span id="username"></span>!
+              </div>
+            </div>
+            <ul class="User-Dropdown">
+              <li><a href="#">My Profile</a></li>  
+              <li><a onclick="removeItem()" href="#">Logout</a></li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </nav>
   </div>
   <div id="content"></div>
   <div class="cursor"></div>
-
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <script>
-    $('#content').load('home.html');
+    $('.User-avtar').click(function () {
+      if ($(".User-Dropdown").hasClass("U-open")) {
+        $('.User-Dropdown').removeClass("U-open");
+      }
+      else {
+        $('.User-Dropdown').addClass("U-open");
+      }
+    });
+    const removeItem = () => {
+      localStorage.removeItem("name");
+      window.location.href = '/'
+    }
+  </script>
 
-    $('#home_button').click(() => {
+  <script>
+    var key = 'name';
+    let user = localStorage.getItem(key);
+    if (user === null || user === '' || user === 'null') {
+      swal("Type Username Here:", {
+        content: "input",
+      })
+        .then((value) => {
+          let userName = value;
+          localStorage.setItem(key, userName);
+          window.location.href = '/'
+        });
+      // $('.swal-button--confirm').click(() => {
+
+      //     console.log('Hello'); 
+
+      // })
+    }
+    else {
+      document.getElementById('username').innerHTML = user;
+
       $('#content').load('home.html');
-    })
 
-    $('#about_button').click(() => {
-      $('#content').load('about.html');
-    })
-    $('#product_button').click(() => {
-      $('#content').load('product.html');
-    })
-    $('#contact_button').click(() => {
-      $('#content').load('contact.html');
-    })
+      $('#home_button').click(() => {
+        $('#content').load('home.html');
+      })
+
+      $('#about_button').click(() => {
+        $('#content').load('about.html');
+      })
+      $('#product_button').click(() => {
+        $('#content').load('product.html');
+      })
+      $('#contact_button').click(() => {
+        $('#content').load('contact.html');
+      })
+    }
+
+
   </script>
 
   <script>
