--- a/home.html
+++ b/home.html
@@ -21,14 +21,14 @@
             <h1 class="name absolute text-6xl md:text-7xl opacity-0">TH<span class="text-9xl">R</span>IFT</h1>
             <h1 class="text-9xl tag absolute opacity-0 milk ls-12">Fashion Store</h1>
         </div>
-        <footer class="relative footer opacity-0 flex justify-end">
+        <!-- <footer class="relative footer opacity-0 flex justify-end">
             <div class="absolute bottom-0 mb-8 w-8 flex flex-col items-center">
                 <i class="text-xl transition-transform transform hover:scale-110 cursor-pointer fab fa-instagram"></i>
                 <i
                     class="text-xl transition-transform transform hover:scale-110 cursor-pointer my-7 fab fa-linkedin-in"></i>
                 <i class="text-xl transition-transform transform hover:scale-110 cursor-pointer fab fa-twitter"></i>
             </div>
-        </footer>
+        </footer> -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script>
@@ -80,23 +80,77 @@
             ".tag",
             {
                 y: "-200%",
-                opacity: 0.5,
+                opacity: 0.65,
                 duration: 2.5,
                 ease: "expo.inOut"
             },
             "-=2.5"
         );
 
-// tl.to(
-//   ".footer:before",
-//   {
-//     height: "150px",
-//     duration: 2,
-//     ease: "expo.inOut"
-//   },
-//   "-=1.5"
-// );
 
+
+
+
+
+
+
+
+
+
+
+        // tl.to(".clip", {
+        //     height: "70vh",
+        //     ease: "expo.inOut",
+        //     duration: 0
+        // });
+
+        // tl.to(
+        //     ".clip",
+        //     {
+        //         backgroundSize: "100%",
+        //         ease: "power4.inOut",
+        //         duration: 0
+        //     },
+        //     0
+        // );
+
+        // tl.to(".clip", {
+        //     duration: 0,
+        //     ease: "expo.inOut",
+        //     clipPath: "polygon(0 15%, 100% 15%, 100% 55%, 0 55%)"
+        // });
+
+        // tl.to(
+        //     ".nav, .footer",
+        //     {
+        //         duration: 0,
+        //         ease: "expo.inOut",
+        //         opacity: 1
+        //     },
+        //     "-=0"
+        // );
+
+        // tl.to(
+        //     ".name",
+        //     {
+        //         y: "-50%",
+        //         opacity: 1.2,
+        //         duration: 0,
+        //         ease: "expo.inOut"
+        //     },
+        //     "-=0"
+        // );
+        // tl.to(
+        //     ".tag",
+        //     {
+        //         y: "-200%",
+        //         opacity: 0.65,
+        //         duration: 0,
+        //         ease: "expo.inOut"
+        //     },
+        //     "-=0"
+        // );
+ 
     </script>
 
 </body>
