--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,71 @@
-<p class="display-1"> Contact </p>
+<div class="container">
+    <div class="products">
+      <div class="container">
+        <h1 class="lg-title">Get in Touch</h1>
+        <p class="text-light">Let's contact us and get the solution of your every query about the Thrift Fashion Store.
+        </p>
+  
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="text-gray-100 px-8 ">
+    <div
+      class="max-w-screen-xl px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto text-gray-900 rounded-lg ">
+      <div class="flex flex-col justify-between">
+        <div>
+          <div class="text-gray-200 text-1xl mt-8">
+            <i class="fa fa-envelope"></i> thrift@store.com
+          </div>
+          <div class="text-gray-200 text-1xl mt-8">
+            <i class="fa fa-phone"></i> +92 (313) 4568 122
+          </div>
+          <div class="text-gray-200 text-1xl mt-8">
+            <i class="fa fa-address-book"></i> Shahrah-e-Faisal, Faisal Cantonment, Karachi, road،, Sindh 75200،
+          </div>
+          <div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.3119409902865!2d67.14982961532233!3d24.88733915030825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33999ec8ecc87%3A0xda9cc5004c86e53f!2sMETRO%20Stargate%2C%20Karachi!5e0!3m2!1sen!2s!4v1660312347806!5m2!1sen!2s"
+              width="420" height="270" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+        <div class="mt-8 text-center">
+  
+        </div>
+      </div>
+      <div class="main-form">
+        <form action="#" name="t-form">
+          
+        <div>
+          <span class="uppercase text-sm text-gray-200 font-bold">Full Name</span>
+          <input type="text" name="username" id="username" pattern="[A-Za-z]{5,29}"  title="Please write words in username" autocomplete="off"
+            class="w-full bg-gray-200 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+            type="text" placeholder="" required>
+        </div>
+        <div class="mt-8">
+          <span class="uppercase text-sm text-gray-200 font-bold">Email</span>
+          <input  type="email" name="usermail" id="usermail" autocomplete="off" class="w-full bg-gray-200 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+            type="text" required>
+        </div>
+        <div class="mt-8">
+          <span  class="uppercase text-sm text-gray-200 font-bold" placeholder="">Message</span>
+          <textarea pattern="[A-Za-z]"
+            class="w-full h-32 bg-gray-200 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+            required></textarea>
+        </div>
+        <div class="mt-8">
+          <button type="submit"
+            class="uppercase text-sm font-bold tracking-wide bg-gray-700 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline">
+            Send Message
+          </button>
+        </div>
+      </form>
+  
+  
+      </div>
+    </div>
+  </div>
+  </div>
+  
