--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
     });
 
     tl.to(
-        ".nav, .footer",
+        ".footer",
         {
             duration: 2,
             ease: "expo.inOut",
