--- a/product.html
+++ b/product.html
@@ -145,7 +145,7 @@
                                   cart
                                   <span><i class="fas fa-plus"></i></span>
                               </button>
-                              <button type="button" class="btn-buy"> buy now
+                              <button onclick="goToProductDetail()" type="button" class="btn-buy"> See Detail
                                   <span><i class="fas fa-shopping-cart"></i></span>
                               </button>
                           </div>
@@ -182,9 +182,9 @@
                                         cart
                                         <span><i class="fas fa-plus"></i></span>
                                         </button>
-                                        <button type="button" class="btn-buy"> buy now
-                                            <span><i class="fas fa-shopping-cart"></i></span>
-                          </button>
+                                        <button onclick="goToProductDetail()" type="button" class="btn-buy"> See Detail
+                                  <span><i class="fas fa-shopping-cart"></i></span>
+                              </button>
                       </div>
                       </div> 
                       <div class="product-info">
