--- a/about.html
+++ b/about.html
@@ -1,1 +1,84 @@
-<p class="display-1"> About</p>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+  integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://kit.fontawesome.com/20b4506959.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+<script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
+
+
+<!-- <div class="container">
+    <div class="products">
+        <div class="container">
+            <h1 class="lg-title">The Brand Of Fashion</h1>
+            <p class="text-light">Since 1942 Bata Pakistan has been rendering its services to its valued customers by offering quality products.</p>
+
+</div>
+</div>
+</div> -->
+
+
+
+<style>
+    /* .main-about img{
+        width: 100%;
+    } */
+
+    .main-about-img{
+        width: 50%;
+    }
+
+    .main-about-para{
+        width: 50%;
+    }
+
+    .main-about-para{
+    transform: translateX(4vw);
+    text-align: right;
+    }
+
+    .main-about-para p{
+        letter-spacing: 1px;
+    }
+
+    .offerCards{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+</style>
+
+<div class="container px-10 main-about flex">
+    <div class="my-auto main-about-para px-2">
+        <h1 class="text-gray-200 text-8xl">Thrift Fashion Store Is Gonna Be Something Crazy.</h1>
+            </div>
+    <div class="main-about-img w-full px-2">
+        <img  src="assets/img/about/main.jpg" alt="">
+    </div>
+</div>
+
+
+    <div class="text-gray-300 text-center px-5 mt-10">
+        <p>Being a multinational company <b>Thrift</b> Pakistan has played a vital role in the economic progress of Pakistan. It has introduced sophisticated technology and business skills to the country and provided direct and indirect employment to about 10,000 people. Along with its own manufacturing capacity <b>Thrift</b> Pakistan is also outsourcing its products nationally and internationally to meet the demands of its valued customers.</p>
+    </div>
+
+    <div class="text-gray-200 text-center px-5 mt-10">
+        <h1 class="text-8xl">See What's We Offer?</h1>
+    </div>
+
+
+
+<div class="container offerCards flex content-center items-between mt-10 text-center">
+    <div class="p-6 max-w-sm bg-white rounded-lg  shadow-md  ">
+            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-white">24 / 7 Query Support</h5>
+        <p class="mb-3 font-normal text-gray-600">Support Query means your query for Technical Support via online form, e-mail or support phone line.</p>
+        </a>
+    </div>
+    <div class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Quality Products</h5>
+        <p class="mb-3 font-normal text-gray-600 dark:text-gray-400">The Quality Products, A composite Leather Garments manufacturing unit has a strong production base.</p>
+        </a>
+    </div>
+    
+</div>
