--- a/productDetail.html
+++ b/productDetail.html
@@ -17,62 +17,66 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.4/tailwind.min.css">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
+
     <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
- 
+
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style.css">
 
     <style>
-        .product-detail-short-detail {
+        /* .product-detail-img {
+            width: 50%;
+        } */
+
+        .product-detail-short-detail{
             width: 50%;
         }
 
         .zoom {
-            padding: 50px;
-            transition: transform .2s; 
-            margin: 0 auto;
-            overflow: hidden;
-            transform: scale(0.8); 
+  padding: 50px;
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+  overflow: hidden;
+  transform: scale(0.8); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 
-        }
+}
 
-        .zoom:hover {
-            transform: scale(1.1) rotate(20deg); 
-        }
+.zoom:hover {
+  transform: scale(1.1) rotate(20deg); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 
 
 
-        .qty {
-            display: flex;
-            flex-wrap: wrap; 
-            text-align: center;
-        }
+ .qty {
+	 display: flex;
+	 flex-wrap: wrap;
+	 /* justify-content: center; */
+	 text-align: center;
+}
+ .qty label {
+	 flex: 1 0 100%;
+}
+ .qty input {
+	 width: 7rem;
+	 height: 3rem;
+	 font-size: 1.3rem;
+	 text-align: center;
+}
+ .qty button {
+	 width: 3rem;
+	 height: 3rem;
+	 font-size: 2rem;
+}
 
-        .qty label {
-            flex: 1 0 100%;
-        }
+.backBtn:hover{
+    transition: 0.3s ease;
+    background-color: #41a5e8;
+}
 
-        .qty input {
-            width: 7rem;
-            height: 3rem;
-            font-size: 1.3rem;
-            text-align: center;
-        }
-
-        .qty button {
-            width: 3rem;
-            height: 3rem;
-            font-size: 2rem;
-        }
-
-        .backBtn:hover {
-            transition: 0.3s ease;
-            background-color: #41a5e8;
-        }
-
-        .backBtn:hover i {
-            transition: 0.3s ease;
-            color: white;
-        }
+.backBtn:hover i{
+    transition: 0.3s ease;
+    color: white;
+}
     </style>
 
 </head>
@@ -84,98 +88,91 @@
     <div class="container p-20 rounded ">
         <div class="product-detail-top bg-white flex p-20">
             <div class="border-4 border-gray-900">
-                <div class="product-detail-img zoom ">
-                    <img src="assets/img/shoe-1.png" alt="">
-                </div>
+            <div class="product-detail-img zoom ">
+                <img src="assets/img/shoe-1.png" alt="">
             </div>
+        </div>
             <div class="product-detail-short-detail ml-2">
-                <h1 class=" text-3xl text-gray-900">mens shoes DN 23XX, new
+                  <h1 class=" text-3xl text-gray-900">mens shoes DN 23XX, new
                     product</h1>
-                <p class="text-3xl mt-4 font-bold  text-gray-900 tracking-wider">$454</p>
-                <div class="rating mt-4">
-                    <span><i class="fas fa-star"></i></span>
-                    <span><i class="fas fa-star"></i></span>
-                    <span><i class="fas fa-star"></i></span>
-                    <span><i class="fas fa-star"></i></span>
-                    <span><i class="far fa-star"></i></span>
-                </div>
-                <p class="text-gray-900 mt-3">Product detail pages (PDP) are the pages that shoppers see when they want
-                    in-depth information on specific products.</p>
-
-                <!-- <input class="mt-3 text-gray-900 w-20" type="number" min="1" name="" value="1"> -->
-                <p class="qty mt-3">
-                    <button class="qtyminus bg-gray-800" aria-hidden="true">&minus;</button>
-                    <input class="text-gray-900" type="number" name="qty" id="qty" min="1" max="20" step="1" value="1">
-                    <button class="qtyplus bg-gray-800" aria-hidden="true">&plus;</button>
-                </p>
-                <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Availability: yes</p>
-                <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Discount: -15 off</p>
-                <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Stock: 50</p>
-
+                    <p class="text-3xl mt-4 font-bold  text-gray-900 tracking-wider">$454</p>
+                    <div class="rating mt-4">
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="far fa-star"></i></span>
+                    </div>
+                    <p class="text-gray-900 mt-3">Product detail pages (PDP) are the pages that shoppers see when they want in-depth information on specific products.</p>
+                    
+                    <!-- <input class="mt-3 text-gray-900 w-20" type="number" min="1" name="" value="1"> -->
+                    <p class="qty mt-3">
+                        <button class="qtyminus bg-gray-800" aria-hidden="true">&minus;</button>
+                        <input class="text-gray-900" type="number" name="qty" id="qty" min="1" max="20" step="1" value="1">
+                        <button class="qtyplus bg-gray-800" aria-hidden="true">&plus;</button>
+                    </p>
+                    <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Availability: yes</p>
+                    <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Discount: -15 off</p>
+                    <p class="text-2xl tracking-wide text-gray-900 mt-3 ">Stock: 50</p>
 
 
-                <button
-                    class="mt-3 bg-gray-800 hover:bg-gray-100 hover:text-gray-900 font-bold py-2 px-4 tracking-wider border-2 border-gray-900 transition-all">
-                    Add to Cart <span><i class="fas fa-plus"></i></span>
-                </button>
-                <button
-                    class="mt-3 bg-gray-800 hover:bg-gray-100 hover:text-gray-900 font-bold py-2 px-4 tracking-wider border-2 border-gray-900 transition-all">
-                    Check Out <span><i class="fas fa-shopping-cart"></i></span>
-                </button>
 
-
+                    <button class="mt-3 bg-gray-800 hover:bg-gray-100 hover:text-gray-900 font-bold py-2 px-4 tracking-wider border-2 border-gray-900 transition-all">
+                        Add to Cart <span><i class="fas fa-plus"></i></span>
+                      </button>
+                    <button class="mt-3 bg-gray-800 hover:bg-gray-100 hover:text-gray-900 font-bold py-2 px-4 tracking-wider border-2 border-gray-900 transition-all">
+                        Check Out <span><i class="fas fa-shopping-cart"></i></span>
+                      </button>
+                    
+		
 
             </div>
         </div>
         <div class="product-detail-long-detail bg-white px-20 pb-20">
             <h1 class=" text-3xl text-gray-900">Product Description</h1>
-            <p class="text-gray-900">These grey pointed heels shoes will make you look bewitching and show off your
-                sense of adventure. They will make you look taller and give you an attractive look that is both feminine
-                and beautiful.
+            <p class="text-gray-900">These grey pointed heels shoes will make you look bewitching and show off your sense of adventure. They will make you look taller and give you an attractive look that is both feminine and beautiful.
 
-                No woman's wardrobe is quite complete without a pair of daring and elegant pointy-toed heels such as
-                these. And with the classic style of these heels, you''re sure to wear these heels for years to come..
-            </p>
+                No woman's wardrobe is quite complete without a pair of daring and elegant pointy-toed heels such as these. And with the classic style of these heels, you''re sure to wear these heels for years to come..</p>
         </div>
     </div>
 
 
     <script>
 
-        var input = document.querySelector('#qty');
-        var btnminus = document.querySelector('.qtyminus');
-        var btnplus = document.querySelector('.qtyplus');
+var input = document.querySelector('#qty');
+var btnminus = document.querySelector('.qtyminus');
+var btnplus = document.querySelector('.qtyplus');
 
-        if (input !== undefined && btnminus !== undefined && btnplus !== undefined && input !== null && btnminus !== null && btnplus !== null) {
+if (input !== undefined && btnminus !== undefined && btnplus !== undefined && input !== null && btnminus !== null && btnplus !== null) {
+	
+	var min = Number(input.getAttribute('min'));
+	var max = Number(input.getAttribute('max'));
+	var step = Number(input.getAttribute('step'));
 
-            var min = Number(input.getAttribute('min'));
-            var max = Number(input.getAttribute('max'));
-            var step = Number(input.getAttribute('step'));
+	function qtyminus(e) {
+		var current = Number(input.value);
+		var newval = (current - step);
+		if(newval < min) {
+			newval = min;
+		} else if(newval > max) {
+			newval = max;
+		} 
+		input.value = Number(newval);
+		e.preventDefault();
+	}
 
-            function qtyminus(e) {
-                var current = Number(input.value);
-                var newval = (current - step);
-                if (newval < min) {
-                    newval = min;
-                } else if (newval > max) {
-                    newval = max;
-                }
-                input.value = Number(newval);
-                e.preventDefault();
-            }
-
-            function qtyplus(e) {
-                var current = Number(input.value);
-                var newval = (current + step);
-                if (newval > max) newval = max;
-                input.value = Number(newval);
-                e.preventDefault();
-            }
-
-            btnminus.addEventListener('click', qtyminus);
-            btnplus.addEventListener('click', qtyplus);
-
-        }
+	function qtyplus(e) {
+		var current = Number(input.value);
+		var newval = (current + step);
+		if(newval > max) newval = max;
+		input.value = Number(newval);
+		e.preventDefault();
+	}
+		
+	btnminus.addEventListener('click', qtyminus);
+	btnplus.addEventListener('click', qtyplus);
+  
+} 
 
 
     </script>
